Changed startup scripts to take start and stop arguments. Fixed the three cores to exit, if they can't initialize their rmiServers
git-svn-id: https://oscars.es.net/repos/oscars/trunk@7697 c75a6b91-02ef-0310-b74a-e20389c9c41d